it is the begin

--- a/workspace/js/modules/common/modal/modal.scss
+++ b/workspace/js/modules/common/modal/modal.scss
@@ -1,1 +1,107 @@
 @import "../../../../scss/import";
+
+.modal-bg,.modal{
+  display: none;
+  position: fixed;
+  overflow-x: hidden;
+  overflow-y: auto;
+  opacity: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  @include opacity(0);
+  @include transition( opacity .15s linear);
+}
+.modal-bg{
+  background-color: #000;
+  z-index: 1040;
+}
+.modal-wrapper.open .modal-bg{
+  display: block;
+  @include opacity(.5);
+}
+.modal{
+  z-index: 1050;
+  outline: 0;
+  text-align: center;
+  @include opacity(0);
+  @include transition( opacity .15s linear);
+  @media (min-width: $screen-xs-min) {
+    &:before {
+      display: inline-block;
+      vertical-align: middle;
+      content: " ";
+      height: 100%;
+    }
+  }
+  .modal-dialog{
+    display: inline-block;
+    text-align: left;
+    position: relative;
+    @include transform(translate(0,-25%));
+    @include transition(transform .3s ease-out);
+    width: auto;
+    margin: 10px;
+    @media (min-width: $screen-sm-min) {
+      width: 600px;
+      margin: 30px auto;
+    }
+    .modal-content {
+      border-radius: 5px;
+      border: none;
+      color: #7d7d7d;
+      @include box-shadow(0 5px 15px rgba(0,0,0,.5));
+      position: relative;
+      background-color: #fff;
+      background-clip: padding-box;
+      outline: 0;
+      .modal-header {
+        color: #fff;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+        padding: 15px;
+        .close{
+          margin-top: -5px;
+          padding: 0;
+          cursor: pointer;
+          background: 0 0;
+          border: 0;
+          outline: 0!important;
+          opacity: 1;
+          float: right;
+          font-size: 21px;
+          line-height: 1;
+          color: #000;
+          text-shadow: 0 1px 0 #fff;
+          font-weight: 700;
+        }
+        .modal-title {
+          color: #fff;
+          margin: 0;
+          line-height: 1.42857143;
+          font-size: 18px;
+          padding: 15px;
+          border: none;
+        }
+      }
+      .modal-body{
+        position: relative;
+        padding: 15px;
+      }
+      .modal-footer{
+        padding: 0 15px 15px;
+        text-align: right;
+        border: none;
+      }
+    }
+  }
+}
+.modal-wrapper.open .modal{
+  display: block;
+  @include opacity(1);
+  .modal-dialog{
+    @include transform(translate(0,0));
+  }
+}
+
