--- a/workspace/js/modules/common/panel/panel.scss
+++ b/workspace/js/modules/common/panel/panel.scss
@@ -16,3 +16,21 @@
   padding: 15px 22px;
   height: 100%;
 }
+
+.panel>.panel-heading {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  border-bottom: 1px solid rgba(0,0,0,.12);
+  height: 44px;
+  font-size: 16px;
+  padding: 14px 22px;
+  @include clearfix;
+  box-shadow: 0 1px 0 0 rgba(255,255,255,.12);
+}
+
+.panel-title {
+  font-weight: 400;
+  opacity: .9;
+  text-transform: uppercase;
+  font-size: 16px;
+}
