--- a/workspace/js/modules/common/toast/toast.scss
+++ b/workspace/js/modules/common/toast/toast.scss
@@ -37,12 +37,27 @@
   }
   &.toast-success {
     background-color: $brand-success;
+    .left-icon{
+      i:before{
+        content: "\e90e";
+      }
+    }
   }
   &.toast-warning {
     background-color: $brand-warning;
+    .left-icon{
+      i:before{
+        content: "\e90c";
+      }
+    }
   }
   &.toast-error {
     background-color: $brand-danger;
+    .left-icon{
+      i:before{
+        content: "\e90f";
+      }
+    }
   }
   .toast-title {
     font-size: 16px;
@@ -78,8 +93,8 @@
     text-shadow: 0 1px 0 #fff;
     font-weight: 700;
     &:hover{
-      color: $brand-danger;
-      text-shadow: 0 1px 0 $brand-danger;
+      color: $gray;
+      text-shadow: 0 1px 0 $gray;
     }
     &:before{
       content: '\e90b';
