--- a/workspace/js/modules/common/tab/tab.scss
+++ b/workspace/js/modules/common/tab/tab.scss
@@ -1,1 +1,58 @@
 @import "../../../../scss/import";
+
+.tab {
+  margin: -15px -22px;
+  .nav-tabs {
+    padding-left: 0px;
+    list-style: none;
+    background-color: rgba(0, 0, 0, 0.2);
+    margin-bottom: 0;
+    //border-top-left-radius: 5px;
+    @include border-radius(5px 5px 0px 0px/ 5px 5px 0px 0px);
+    > li {
+      position: relative;
+      display: inline-block;
+      text-align: center;
+      > a {
+        display: block;
+        color: #fff;
+        padding: 10px 15px;
+        .dropdown-menu {
+          padding-left: 0px;
+          list-style: none;
+          @include border-radius(0px 0px 5px 5px/ 0px 0px 5px 5px);
+          margin-top: 0px;
+          font-size: 13px;
+          > li{
+            > a{
+              color: #000;
+              &:active,&:hover,&.active{
+                background-color: rgba(0, 0, 0, 0.7);
+                color: #fff;
+              }
+            }
+          }
+        }
+        &:active,&:hover,&.active{
+          background-color: rgba(0, 0, 0, 0.5);
+          .dropdown-menu{
+            display: block;
+          }
+        }
+      }
+      &:first-child{
+        > a{
+          @include border-radius(5px 0px 0px 0px/ 5px 0px 0px 0px);
+        }
+      }
+    }
+
+  }
+  .tab-content{
+    padding: 15px 15px 5px;
+    min-height: 100px;
+    .tab-panel{
+      display: none;
+    }
+  }
+}
