--- a/workspace/js/modules/common/tab/tab.scss
+++ b/workspace/js/modules/common/tab/tab.scss
@@ -13,46 +13,60 @@
       position: relative;
       display: inline-block;
       text-align: center;
-      > a {
-        display: block;
-        color: #fff;
-        padding: 10px 15px;
+      color: #fff;
+      padding: 10px 15px;
+      cursor: pointer;
+      @include transition(all 0.2s ease);
+      &:active, &:hover, &.active {
+        background-color: rgba(0, 0, 0, 0.5);
+      }
+      &:active, &:hover {
+        .dropdown-menu {
+          display: block;
+        }
+      }
+
+      &:first-child {
+          @include border-radius(5px 0px 0px 0px/ 5px 0px 0px 0px);
+      }
         .dropdown-menu {
           padding-left: 0px;
           list-style: none;
           @include border-radius(0px 0px 5px 5px/ 0px 0px 5px 5px);
           margin-top: 0px;
           font-size: 13px;
-          > li{
-            > a{
-              color: #000;
-              &:active,&:hover,&.active{
-                background-color: rgba(0, 0, 0, 0.7);
-                color: #fff;
-              }
-            }
-          }
-        }
-        &:active,&:hover,&.active{
-          background-color: rgba(0, 0, 0, 0.5);
-          .dropdown-menu{
+          > li {
             display: block;
-          }
-        }
-      }
-      &:first-child{
-        > a{
-          @include border-radius(5px 0px 0px 0px/ 5px 0px 0px 0px);
+            padding: 3px 20px;
+            clear: both;
+            font-weight: normal;
+            line-height: 1.42857;
+            color: #000;
+            white-space: nowrap;
+            &:active, &:hover, &.active {
+              background-color: rgba(0, 0, 0, 0.7);
+              color: #fff;
+            }
         }
       }
     }
 
   }
-  .tab-content{
+  .tab-content {
     padding: 15px 15px 5px;
     min-height: 100px;
-    .tab-panel{
+    .tab-panel {
       display: none;
+      &.active {
+        display: block;
+      }
+      .sub-tab-panel {
+        display: none;
+        &.active {
+          display: block;
+        }
+      }
     }
   }
 }
+
