--- a/workspace/js/modules/common/tab/tab.scss
+++ b/workspace/js/modules/common/tab/tab.scss
@@ -27,26 +27,26 @@
       }
 
       &:first-child {
-          @include border-radius(5px 0px 0px 0px/ 5px 0px 0px 0px);
+        @include border-radius(5px 0px 0px 0px/ 5px 0px 0px 0px);
       }
-        .dropdown-menu {
-          padding-left: 0px;
-          list-style: none;
-          @include border-radius(0px 0px 5px 5px/ 0px 0px 5px 5px);
-          margin-top: 0px;
-          font-size: 13px;
-          > li {
-            display: block;
-            padding: 3px 20px;
-            clear: both;
-            font-weight: normal;
-            line-height: 1.42857;
-            color: #000;
-            white-space: nowrap;
-            &:active, &:hover, &.active {
-              background-color: rgba(0, 0, 0, 0.7);
-              color: #fff;
-            }
+      .dropdown-menu {
+        padding-left: 0px;
+        list-style: none;
+        @include border-radius(0px 0px 5px 5px/ 0px 0px 5px 5px);
+        margin-top: 0px;
+        font-size: 13px;
+        > li {
+          display: block;
+          padding: 3px 20px;
+          clear: both;
+          font-weight: normal;
+          line-height: 1.42857;
+          color: #000;
+          white-space: nowrap;
+          &:active, &:hover, &.active {
+            background-color: rgba(0, 0, 0, 0.7);
+            color: #fff;
+          }
         }
       }
     }
@@ -66,6 +66,61 @@
           display: block;
         }
       }
+    }
+  }
+  &.left-vertical {
+    overflow: auto;
+    .nav-tabs {
+      float: left;
+      @include border-radius(5px 0px 0px 5px/ 5px 0px 0px 5px);
+      > li {
+        display: block;
+        .dropdown-menu {
+          left: 100%;
+          top: auto;
+          bottom: 0;
+          @include border-radius(0px 5px 5px 0px/0px 5px 5px 0px);
+          > li {
+            margin: 0 2px;
+          }
+        }
+        &:last-child{
+          @include border-radius(0px 0px 0px 5px/ 0px 0px 0px 5px);
+        }
+      }
+    }
+    .tab-content {
+      float: left;
+      padding: 5px 15px 5px;
+    }
+  }
+
+  &.right-vertical {
+    overflow: auto;
+    .nav-tabs {
+      float: right;
+      @include border-radius(0px 5px 5px 0px/ 0px 5px 5px 0px);
+      > li {
+        display: block;
+        .dropdown-menu {
+          right: 100%;
+          top: auto;
+          left: auto;
+          bottom: 0;
+          @include border-radius(5px 0px 0px 5px/5px 0px 0px 5px);
+          > li {
+            margin: 0 2px;
+            text-align: right;
+          }
+        }
+        &:last-child{
+          @include border-radius(0px 0px 5px 0px/ 0px 0px 5px 0px);
+        }
+      }
+    }
+    .tab-content {
+      float: right;
+      padding: 5px 15px 5px;
     }
   }
 }
