--- a/workspace/js/modules/common/tab/tab.scss
+++ b/workspace/js/modules/common/tab/tab.scss
@@ -95,7 +95,8 @@
         height: 100%;
         > li:last-child {
           @include border-radius(0px 0px 0px 0px/ 0px 0px 0px 0px);
-          border-bottom: groove 1px #fff;
+          border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+          box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.12);
         }
       }
     }
@@ -136,7 +137,8 @@
         height: 100%;
         > li:last-child {
           @include border-radius(0px 0px 0px 0px/ 0px 0px 0px 0px);
-          border-bottom: groove 1px #fff;
+          border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+          box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.12);
         }
       }
     }
