--- a/workspace/scss/basic.scss
+++ b/workspace/scss/basic.scss
@@ -9,6 +9,7 @@
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/forms";
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/buttons";
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/dropdowns";
+@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/tables";
 body, html {
   min-height: 100%;
   height: 100%;
