--- a/workspace/scss/basic.scss
+++ b/workspace/scss/basic.scss
@@ -8,8 +8,10 @@
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/grid";
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/forms";
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/buttons";
+@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/button-groups";
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/dropdowns";
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/tables";
+@import '../../node_modules/react-select/dist/react-select.css';
 body, html {
   min-height: 100%;
   height: 100%;
@@ -137,4 +139,17 @@ a, .a {
 
 h1, .h1, h2, .h2, h3, .h3{
   margin: 0 auto;
+}
+.clearfix-bottom{
+  clear: both;
+}
+.Select-control{
+  height: 30px;
+}
+.Select-placeholder, .Select--single > .Select-control .Select-value{
+  color: #666;
+  line-height: 30px;
+}
+.Select-input{
+  height: 30px;
 }
