--- a/workspace/js/modules/common/table/table.scss
+++ b/workspace/js/modules/common/table/table.scss
@@ -34,6 +34,7 @@
               background-color: rgba(0, 0, 0, .3);
               height: 25px;
               border-color: rgba(0, 0, 0, .1);
+              padding: 6px 3px;
             }
           }
         }
