--- a/workspace/js/modules/common/table/table.scss
+++ b/workspace/js/modules/common/table/table.scss
@@ -43,19 +43,54 @@
         tr {
           border-bottom: none;
           td {
-            padding: 0 8px;
-            line-height: 35px;
+            padding: 4px 8px;
+            line-height: 25px;
+            vertical-align: middle;
             border-top: none;
             &.td-row-actions {
               div.btn-group {
                 width: 120px;
               }
             }
-            .td-value{
+            .td-value {
               display: inline-block;
             }
-            .editable{
+            .editable {
               display: none;
+            }
+          }
+          &.edit {
+            td {
+              .td-value {
+                display: none;
+              }
+              .editable {
+                line-height: 25px;
+                display: block;
+                &.Select{
+                  width: 100%;
+                }
+                &.input-text{
+                  border: 1px solid $input-border;
+                  border-radius: $input-border-radius; // Note: This has no effect on <select>s in some browsers, due to the limited stylability of <select>s in CSS.
+                  @include box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
+                  @include transition(border-color ease-in-out .15s, box-shadow ease-in-out .15s);
+                  @include form-control-focus;
+                  color: #000;
+                  padding: 0px 3px;
+                }
+                &.ul-wrapper{
+                  margin-bottom: 0;
+                  padding-left: 0px;
+                  li{
+                    display: inline-block;
+                    padding-right: 10px;
+                    input{
+                      margin-right: 2px;
+                    }
+                  }
+                }
+              }
             }
           }
         }
