--- a/workspace/js/modules/common/table/table.scss
+++ b/workspace/js/modules/common/table/table.scss
@@ -48,8 +48,14 @@
             vertical-align: middle;
             border-top: none;
             &.td-row-actions {
-              div.btn-group {
+              div.btn-group{
                 width: 120px;
+                &.edited {
+                  display: block;
+                }
+                &.editing {
+                  display: none;
+                }
               }
             }
             .td-value {
@@ -67,27 +73,37 @@
               .editable {
                 line-height: 25px;
                 display: block;
-                &.Select{
+                &.Select {
                   width: 100%;
                 }
-                &.input-text{
+                &.input-text {
                   border: 1px solid $input-border;
                   border-radius: $input-border-radius; // Note: This has no effect on <select>s in some browsers, due to the limited stylability of <select>s in CSS.
-                  @include box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
+                  @include box-shadow(inset 0 1px 1px rgba(0, 0, 0, .075));
                   @include transition(border-color ease-in-out .15s, box-shadow ease-in-out .15s);
                   @include form-control-focus;
                   color: #000;
                   padding: 0px 3px;
                 }
-                &.ul-wrapper{
+                &.ul-wrapper {
                   margin-bottom: 0;
                   padding-left: 0px;
-                  li{
+                  li {
                     display: inline-block;
                     padding-right: 10px;
-                    input{
+                    input {
                       margin-right: 2px;
                     }
+                  }
+                }
+              }
+              &.td-row-actions {
+                div.btn-group{
+                  &.edited {
+                    display: none;
+                  }
+                  &.editing {
+                    display: block;
                   }
                 }
               }
