--- a/workspace/js/modules/common/table/table.scss
+++ b/workspace/js/modules/common/table/table.scss
@@ -29,9 +29,25 @@
             }
 
           }
-          &.theadFilter {
-            input {
-              background-color: rgba(0, 0, 0, .3);
+
+          &.theadFilter{
+            th{
+              background-color: rgba(0, 0, 0, 0.2);
+            }
+          }
+          &.theadRowAdd{
+            display: none;
+            th{
+              background-color: rgba(0, 0, 0, 0.3);
+            }
+          }
+          &.theadFilter,&.theadRowAdd {
+            th{
+              padding-top: 4px;
+              padding-bottom: 4px;
+            }
+            input.editable {
+              background-color: rgba(0, 0, 0, .5);
               height: 25px;
               border-color: rgba(0, 0, 0, .1);
               padding: 6px 3px;
@@ -71,31 +87,7 @@
                 display: none;
               }
               .editable {
-                line-height: 25px;
                 display: block;
-                &.Select {
-                  width: 100%;
-                }
-                &.input-text {
-                  border: 1px solid $input-border;
-                  border-radius: $input-border-radius; // Note: This has no effect on <select>s in some browsers, due to the limited stylability of <select>s in CSS.
-                  @include box-shadow(inset 0 1px 1px rgba(0, 0, 0, .075));
-                  @include transition(border-color ease-in-out .15s, box-shadow ease-in-out .15s);
-                  @include form-control-focus;
-                  color: #000;
-                  padding: 0px 3px;
-                }
-                &.ul-wrapper {
-                  margin-bottom: 0;
-                  padding-left: 0px;
-                  li {
-                    display: inline-block;
-                    padding-right: 10px;
-                    input {
-                      margin-right: 2px;
-                    }
-                  }
-                }
               }
               &.td-row-actions {
                 div.btn-group{
@@ -191,6 +183,39 @@
       }
       .tr-deep {
         background-color: rgba(0, 0, 0, .1);
+      }
+      td,th {
+        .editable {
+          line-height: 25px;
+          display: block;
+          &.Select {
+            width: 100%;
+          }
+          &.input-text {
+            border: 1px solid $input-border;
+            border-radius: $input-border-radius; // Note: This has no effect on <select>s in some browsers, due to the limited stylability of <select>s in CSS.
+            @include box-shadow(inset 0 1px 1px rgba(0, 0, 0, .075));
+            @include transition(border-color ease-in-out .15s, box-shadow ease-in-out .15s);
+            @include form-control-focus;
+            color: #000;
+            padding: 0px 3px;
+            width: 100%;
+          }
+          &.ul-wrapper {
+            margin-bottom: 0;
+            padding-left: 0px;
+            li {
+              display: inline-block;
+              padding-right: 10px;
+              input {
+                margin-right: 2px;
+              }
+            }
+          }
+          label{
+            font-weight: normal;
+          }
+        }
       }
     }
   }
