--- a/workspace/js/modules/common/panel/panel.scss
+++ b/workspace/js/modules/common/panel/panel.scss
@@ -33,6 +33,6 @@
 .panel-title {
   font-weight: 400;
   opacity: .9;
-  text-transform: uppercase;
+  //text-transform: uppercase;
   font-size: 16px;
 }
