--- a/workspace/js/modules/common/panel/panel.scss
+++ b/workspace/js/modules/common/panel/panel.scss
@@ -4,9 +4,9 @@
  // background-size: cover;
   background: url(../../../../assets/images/bg-panel.jpg) scroll ;
   background-size: 1920px 1080px;
-  background-position: -525px 0px;
+  background-position: 0px 0px;
   @include animation(zoomIn 0.5s);
-  @include animation-fill-mode(both);
+  //@include animation-fill-mode(both);
   border: none;
   border-radius: 5px;
   position: relative;
