it is the begin

--- a/workspace/js/modules/common/responsiveCharts/responsiveCharts.scss
+++ b/workspace/js/modules/common/responsiveCharts/responsiveCharts.scss
@@ -8,7 +8,7 @@
   .rd3-legend-item span{
     color: #fff!important;
   }
-  .rd3-linechart-xaxis,.rd3-linechart-yaxis{
+  .rd3-linechart-xaxis,.rd3-linechart-yaxis,.rd3-areachart-xaxis,.rd3-areachart-yaxis{
     path{
       stroke: #fff!important;
     }
