--- a/workspace/scss/basic.scss
+++ b/workspace/scss/basic.scss
@@ -12,7 +12,6 @@
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/dropdowns";
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/tables";
 @import '../../node_modules/react-select/scss/default';
-
 @import "charts.scss";
 
 body, html {
@@ -28,10 +27,12 @@ body {
   color: white;
   overflow: hidden;
 }
-#entirety{
+
+#entirety {
   overflow: hidden;
   height: 100%;
 }
+
 body:before {
   content: '';
   position: fixed;
@@ -48,26 +49,27 @@ a, .a {
   cursor: pointer;
   @include transition(all .2s ease);
 }
-button:focus{
-  outline: 0!important;
+
+button:focus {
+  outline: 0 !important;
 }
 
-@include keyframes("pulsate"){
+@include keyframes("pulsate") {
   30% {
-    @include scale(.1,.1);
+    @include scale(.1, .1);
     @include opacity(0);
   }
   35% {
-    @include scale(.1,.1);
+    @include scale(.1, .1);
     @include opacity(1);
   }
   40% {
-    @include scale(1.2,1.2);
+    @include scale(1.2, 1.2);
     @include opacity(0);
   }
 }
 
-@include keyframes("zoomIn"){
+@include keyframes("zoomIn") {
   from {
     @include opacity(0);
     @include scale(.3, .3);
@@ -78,8 +80,7 @@ button:focus{
   }
 }
 
-
-@include keyframes("modal-bg-show"){
+@include keyframes("modal-bg-show") {
   from {
     @include opacity(0);
   }
@@ -88,7 +89,7 @@ button:focus{
   }
 }
 
-@include keyframes("modal-bg-hide"){
+@include keyframes("modal-bg-hide") {
   from {
     @include opacity(.5);
   }
@@ -97,29 +98,29 @@ button:focus{
   }
 }
 
-@include keyframes("modal-content-show"){
+@include keyframes("modal-content-show") {
   from {
     @include opacity(0);
-    @include transform(translate(0,-25%));
+    @include transform(translate(0, -25%));
   }
   100% {
     @include opacity(1);
-    @include transform(translate(0,0));
+    @include transform(translate(0, 0));
   }
 }
-@include keyframes("modal-content-hide"){
+
+@include keyframes("modal-content-hide") {
   from {
     @include opacity(1);
-    @include transform(translate(0,0));
+    @include transform(translate(0, 0));
   }
   100% {
     @include opacity(0);
-    @include transform(translate(0,-25%));
+    @include transform(translate(0, -25%));
   }
 }
 
-
-@include keyframes("toast-show"){
+@include keyframes("toast-show") {
   from {
     @include opacity(0);
   }
@@ -128,7 +129,7 @@ button:focus{
   }
 }
 
-@include keyframes("toast-hide"){
+@include keyframes("toast-hide") {
   from {
     @include opacity(1);
   }
@@ -137,19 +138,20 @@ button:focus{
   }
 }
 
-.fa{
+.fa {
   font-family: 'Icomoon Icon' !important;
   font-style: normal;
-  @include  transition(all 0.2s ease);
+  @include transition(all 0.2s ease);
 }
 
-
-h1, .h1, h2, .h2, h3, .h3{
+h1, .h1, h2, .h2, h3, .h3 {
   margin: 0 auto;
 }
-.clearfix-bottom{
+
+.clearfix-bottom {
   clear: both;
 }
+
 .Select {
   line-height: normal;
 }
