--- a/workspace/js/modules/common/modal/modal.scss
+++ b/workspace/js/modules/common/modal/modal.scss
@@ -62,6 +62,9 @@
       width: 600px;
       margin: 30px auto;
     }
+    @media (max-width: $screen-phone) {
+      width: 80%;
+    }
     .modal-content {
       border-radius: 5px;
       border: none;
@@ -123,12 +126,19 @@
   @media (min-width: $screen-md-min) {
     width: 900px;
   }
+  @media (max-width: $screen-phone) {
+    width: 80%;
+  }
+
 }
 
 
 .modal .modal-dialog.modal-sm {
   @media (min-width: $screen-xs-min) {
     width: 300px;
+  }
+  @media (max-width: $screen-phone) {
+    width: 80%;
   }
 }
 .modal-wrapper.open .modal {
