--- a/workspace/js/modules/common/modal/modal.scss
+++ b/workspace/js/modules/common/modal/modal.scss
@@ -62,7 +62,7 @@
       width: 600px;
       margin: 30px auto;
     }
-    @media (max-width: $screen-phone) {
+    @media (max-width: $screen-xs-max) {
       width: 80%;
     }
     .modal-content {
@@ -126,7 +126,7 @@
   @media (min-width: $screen-md-min) {
     width: 900px;
   }
-  @media (max-width: $screen-phone) {
+  @media (max-width: $screen-xs-max) {
     width: 80%;
   }
 
