--- a/workspace/js/modules/common/form/form.scss
+++ b/workspace/js/modules/common/form/form.scss
@@ -1,6 +1,6 @@
 @import "../../../../scss/import";
 
-.defaultForm, .noLabelForm, .horizontalForm, .inlineForm,.blockForm {
+.defaultForm, .noLabelForm, .horizontalForm, .inlineForm, .blockForm {
   overflow: hidden;
   .form-group {
     .form-control {
@@ -24,12 +24,12 @@
       margin-right: 10px;
     }
     div.reset {
-       float: left;
-     }
+      float: left;
+    }
   }
 }
 
-.defaultForm, .horizontalForm,.blockForm {
+.defaultForm, .horizontalForm, .blockForm {
   .form-group {
     label span.required {
       color: $brand-danger;
@@ -86,6 +86,13 @@
         position: absolute;
       }
     }
+    div.action {
+      display: inline-block;
+      div.submit, div.reset {
+        display: inline-block;
+        float: none;
+      }
+    }
 
     .action {
       width: 120px;
@@ -93,8 +100,9 @@
     }
   }
 }
-.blockForm{
-  .col{
+
+.blockForm {
+  .col {
     padding-left: 0;
     .form-group {
       position: relative;
